# rust-webgl-demo

./: Cargo.toml  LICENSE_MIT  README.md  index.html  serve.sh  watch.sh
js/: load_image.js
src/: assets.rs  components.rs  data.rs  game.rs  gl.rs  input_system.rs  lib.rs  move_system.rs  quad.frag  quad.vert  render_system.rs  sprites.rs  utils.rs
