[package]
name = "webgl-game"
version = "0.1.0"
authors = ["Joni Katajamäki <joni.katajamaki@wunderdog.fi>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
anyhow = "1.0.26"
wasm-bindgen = "0.2"
js-sys = "0.3.35"
vek = "0.9.11"
wasm-bindgen-futures = "0.4.8"
specs = { version = "0.16.1", features = ["specs-derive", "shred-derive"] }
shrev = "1.1.1"
rand = { version = "0.7.3", features = ["wasm-bindgen"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }

[dependencies.web-sys]
version = "0.3.35"
features = [
  "console",
  "Window",
  'Document',
  "DomRect",
  "HtmlElement",
  'Element',
  'HtmlImageElement',
  'HtmlCanvasElement',
  'WebGlBuffer',
  'WebGlRenderingContext',
  'WebGlProgram',
  'WebGlShader',
  'WebGlUniformLocation',
  'WebGlTexture'
]

[dev-dependencies]
wasm-bindgen-test = "0.2"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
